# P.U.L.S.E

./: COMPLETION_SUMMARY.md  DOCS_INDEX.md  FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  pulse.db
.github/: copilot-instructions.md
backend/: .gitignore  main.py  pyproject.toml
backend/app/agents/: __init__.py
backend/app/core/: database.py  llm_service.py  security.py  settings.py
backend/app/models/: __init__.py
backend/app/routes/: __init__.py  foods.py  meals.py  meals_ai.py  nutrition.py
backend/app/services/: meal_processing_service.py  nutrition_service.py
backend/pulse_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_flow.py  test_foods.py  test_meal_crud.py  test_routes.py  test_routes_basic.py
docs/: DESIGN_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_1_DESIGN.md  PROJECT_SUMMARY.md  STAGE_1_COMPLETE.md  STAGE_2_COMPLETE.md  STAGE_3_COMPLETE.md  STAGE_3_SUMMARY.md  STAGE_4_COMPLETE.md  STAGE_4_VERIFICATION.md
frontend/: .env  app.py  pyproject.toml
frontend/app/: __init__.py
frontend/app/routes/: auth_routes.py  dashboard_routes.py  meal_routes.py  settings_routes.py
frontend/app/static/css/: style.css
frontend/app/static/js/: app.js
frontend/app/templates/: base.html  dashboard.html  login.html  meal.html  meal_history.html  register.html  settings.html
frontend/app/utils/: __init__.py
frontend/pulse_frontend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontendV2/: .gitignore  DEVELOPMENT_GUIDE.md  PAGES_STATUS.md  QUICK_START.md  (+5 more)
(+95 files in other folders)
