[project]
name = "pulse-backend"
version = "0.1.0"
requires-python = "<3.13, >=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.30",
    "pydantic[email]==2.7.1",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "bcrypt==3.2.0",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
